# spark_gcp

./: .env.example  .gitignore  Makefile  environment.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  format.yml
src/us_accidents_etl/: pipeline.py
src/us_accidents_etl/config/: settings.py
src/us_accidents_etl/extract/: reader.py
src/us_accidents_etl/load/: writer.py
src/us_accidents_etl/ml/: trainer.py
src/us_accidents_etl/spark/: session.py
tests/unit/: test_filters.py
