[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "us-accidents-etl"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pyspark>=3.5",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
]

[tool.setuptools.packages.find]
where = ["src"]
