[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "us-accidents-etl"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pyspark>=3.5",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["pyspark.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pydantic.*", "pydantic_settings.*"]
ignore_missing_imports = true
